--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
+/* Import font */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+/* Reset */
 * {
     box-sizing: border-box;
     margin: 0;
@@ -7,8 +9,10 @@
     font-family: 'Roboto', sans-serif;
 }
 
+/* Global */
 body {
     background-color: rgb(246, 248, 249);
+    line-height: 2em;
 }
 
 header {
@@ -23,14 +27,76 @@ header {
     border-radius: 10px;
 }
 
-.buttons {
-    border-bottom: 2px solid gb(246, 248, 249);
-}
+/* Buttons section */
 
 .btn {
     padding: 7px;
     border-radius: 5px;
     font-weight: 600;
+}
+
+.sections {
+    margin-left: 10px;
+    margin-top: 30px;
+}
+
+.section {
+    list-style-type: none;
+}
+
+.section-todo {
+    margin-left: 5px;
+}
+
+.section-title {
+    font-size: 25px;
+    font-weight: bold;
+    list-style: '\25BC';
+}
+
+/*  Chips and color */
+.chips {
+    padding: 5px;
+    border: none;
+    border-radius: 15px;
+    color: white;
+}
+
+.blue {
+    background-color: rgb(69, 171, 234);
+}
+
+.violet {
+    background-color: rgb(156, 114, 228);
+}
+
+.green {
+    background-color: rgb(100, 192, 169);
+}
+
+.orange {
+    background-color: rgb(242, 158, 51);
+}
+
+.pink {
+    background-color: rgb(216, 99, 161);
+}
+
+.acid {
+    background-color: rgb(176, 201, 38);
+}
+
+/* Type of list image */
+.done {
+    list-style-image: url('../img/iconmonstr-check-mark-circle-thin.svg');
+}
+
+.done::before {
+    color: green
+}
+
+.undone {
+    list-style-image: url('../img/iconmonstr-x-mark-7.svg');
 }
 
 #title {
@@ -49,4 +115,8 @@ header {
     background-color: white;
     color: lightgrey;
     border: 1px solid lightgray;
+}
+
+#to-dos {
+    margin-top: 20px;
 }
