--- a/css/style.css
+++ b/css/style.css
@@ -15,26 +15,32 @@ body {
     line-height: 2em;
 }
 
+/* Header & Main */
 header {
     background-color: white;
+    height: 80px;
 }
 
 .container {
     background-color: white;
     width: 60%;
     margin: 50px auto 0;
-    padding: 20px;
+    /* padding: 20px; */
     border-radius: 10px;
 }
 
-/* Buttons section */
+.buttons {
+    padding: 20px;
+}
 
+/* Buttons */
 .btn {
     padding: 7px;
     border-radius: 5px;
     font-weight: 600;
 }
 
+/* Sections */
 .sections {
     margin-left: 10px;
     margin-top: 30px;
@@ -46,6 +52,7 @@ header {
 
 .section-todo {
     margin-left: 5px;
+    vertical-align: middle;
 }
 
 .section-title {
@@ -99,10 +106,11 @@ header {
     list-style-image: url('../img/iconmonstr-x-mark-7.svg');
 }
 
+/* IDS */
 #title {
     display: inline-block;
     font-weight: 900;
-    vertical-align: top;
+    height: 100%;
 }
 
 #add-task {
@@ -118,5 +126,12 @@ header {
 }
 
 #to-dos {
-    margin-top: 20px;
+    margin: 20px;
+}
+
+#divider {
+    height: 3px;
+    border: none;
+    background-color: rgb(246, 248, 249);
+    width: 100%;
 }
